force-app/main/default/objects/PricebookEntry/fields/Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Price__c</fullName>
    <formula>IF(  ISPICKVAL( Product2.Type__c , &apos;Standard Products&apos;),  UnitPrice /Capacity_Desks__c ,UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>