force-app/main/default/objects/PricebookEntry/fields/Capacity_Desks__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Desks__c</fullName>
    <formula>Product2.Capacity_Desks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity (Desks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>