force-app/main/default/objects/PricebookEntry/fields/Destination_Price__c.field-meta.xml
<CustomField>
    <fullName>Destination_Price__c</fullName>
    <formula>Product2.Destination_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>