force-app/main/default/objects/PricebookEntry/fields/Last_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Price__c</fullName>
    <formula>Product2.Last_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>