force-app/main/default/objects/PricebookEntry/fields/Size_m__c.field-meta.xml
<CustomField>
    <fullName>Size_m__c</fullName>
    <formula>Product2.Size_m2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size (m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>